--- a/doc/trunk/design/syn/S02.pod
+++ b/doc/trunk/design/syn/S02.pod
@@ -186,9 +186,9 @@ the same performance issues they have in Perl 5.
 
 Built-in object types start with an uppercase letter. This includes
 immutable types (e.g. C<Int>, C<Num>, C<Complex>, C<Rational>, C<Str>,
-C<Bit>, C<Rule>, C<Set>, C<Junction>, C<List>, C<Tuple>), as well as
-mutable (container) types, such as C<Scalar>, C<Array>, C<Hash>,
-C<Code>, C<Module>, etc.
+C<Bit>, C<Rule>, C<Set>, C<Junction>, C<Code>, B<Block>, C<List>,
+C<Tuple>), as well as mutable (container) types, such as C<Scalar>,
+C<Array>, C<Hash>, C<Routine>, C<Module>, etc.
 
 Non-object (native) types are lowercase: C<int>, C<num>, C<complex>,
 C<rational>, C<str>, C<bit>.  Native types are primarily intended for
