* S06: note that all native types autobox to their uppercased   counterparts. Nicholas++ for asking.
git-svn-id: http://svn.pugscode.org/pugs@23295 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S06.pod
+++ b/doc/trunk/design/syn/S06.pod
@@ -1244,9 +1244,10 @@ Note that placeholder variables syntactically cannot have type constraints.
 
 =head1 Built-in Types
 
-These are some of the standard type names in Perl 6 (at least this week):
-
 =head2 Native types
+
+Values with these types autoboxes to their uppercase counterparts when
+you treat them as objects:
 
     bit         single native bit
     int         native signed integer
